--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.3.0
+fastapi==0.108.0
+uvicorn[standard]==0.25.0
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
 imbalanced-learn==0.11.0
-pydantic==2.4.2
+pydantic==2.5.2
 python-multipart==0.0.6
 requests==2.31.0
