--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,10 @@
 fastapi==0.108.0
-uvicorn[standard]==0.25.0
+uvicorn==0.25.0
 pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-imbalanced-learn==0.11.0
+numpy==1.26.4
+scikit-learn==1.4.0
+imbalanced-learn==0.12.0
 pydantic==2.5.2
 python-multipart==0.0.6
 requests==2.31.0
+joblib==1.3.2
